--- a/crosshair/templates/index.html
+++ b/crosshair/templates/index.html
@@ -5,38 +5,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="myCanvas"> <svg width='640' height='480'  preserveAspectRatio='none'>
-            <rect stroke='black' fill='none'
+    <div id="one"> <svg width='640' height='480'  preserveAspectRatio='none'>
+            <rect id="first" stroke='black' fill='none'
             stroke-dasharray="10 5" />
-            <circle fill='blue' r='5' />
-            <circle fill='red' r='5' /> </svg> </div>
-    <div id="entries"> Profile name: <input id="name" type="text" name="FirstName" value="Empty"><br> <button
-            onclick="addProfile()">Add Profile</button> <select id="select" onchange="loadCoords()"> </select> <button
+
+
+            <rect id="first" stroke='black' fill='none' />
+            <rect id="first_fill" stroke='black' fill='black' />
+            <text id="first_text" fill="white"></text>
+
+
+            <rect id="second" stroke='deepskyblue' fill='none'/>
+            <rect id="second_fill"  fill='deepskyblue'/>
+            <text id="second_text" fill="white"></text>
+
+            
+            <rect id="third" stroke='orangered' fill='none'/>
+            <rect id="third_fill" fill='orangered' />
+            <text id="third_text" fill="black"></text>
+
+
+
+            <rect id="fourth" stroke='springgreen' fill='none' />
+            <rect id="fourth_fill" fill='springgreen' />
+            <text id="fourth_text" fill="white"></text>
+
+
+
+            <rect id="fifth" stroke='red' fill='none'/>
+            <rect id="fifth_fill" fill='red' />
+            <text id="fifth_text" fill="white"></text>
+
+
+            <circle fill='blue' cx="-5" cy="-5" r='5' />
+            <circle fill='red' cx="-5" cy="-5" r='5' /> </svg> </div>
+
+    <div id="entries"> Profile name: <input id="name" type="text" name="FirstName" value="Empty"><br> 
+        <button onclick="saveProfile()">Save Profile</button>
+        Box name: <input id="boxName" oninput="boxName(this.value)"  type="text" name="E" value="Empty">
+         <select id="select" onchange="loadCoords()"> </select> <button
             onclick="deleteProfile()">Delete Profile</button> </div>
 
+            Select Box
+            <SELECT id="dropdown" name="dropdown" onchange="a = this.options[selectedIndex].value; changeVis(a)">
+                <OPTION selected value="none">None</OPTION>
+                <OPTION selected value="first">1</OPTION>
+                <OPTION value="second">2</OPTION>
+                <OPTION value="third">3</OPTION>
+                <OPTION value="fourth">4</OPTION>
+                <OPTION value="fifth">5</OPTION>
+                </SELECT>
     <style>
-        /* #myCanvas {
+        #one {
             position: absolute;
             z-index: 100;
         }
-
+        tspan { 
+            font-family: 'Roboto Mono', monospace;
+        }
         #entries {
             padding-top: 480px;
-        } */
+        }
     </style>
 </body>
 <script>
     
-
- 
-
- 
 
     function updateDropdown() {
         console.log("uopdate")
@@ -46,6 +89,7 @@
             const objData = Object.entries(data)
             select.options.length = 0;
             for (const [key, value] of objData) {
+                console.log(key, value)
                 var option = document.createElement("option");
                 option.text = key;
                 select.add(option);
@@ -57,54 +101,69 @@
     function loadCoords() {
         var select = document.getElementById("select").value 
         $.getJSON('static/data.json', function (data) {
-            const objData = Object.entries(data)
-            for (const [key, value] of objData) {
-                if (key === select) {
-                    
-                    rect.setAttribute('x', value.x);
-                    rect.setAttribute('y', value.y);
-                    rect.setAttribute('width', value.width);
-                    rect.setAttribute('height', value.height);
-                    initial_pt.setAttribute('cx', value.x);
-                    initial_pt.setAttribute('cy', value.y);
-                    current_pt.setAttribute('cx', parseInt(value.x) + parseInt(value.width));
-                    current_pt.setAttribute('cy', parseInt(value.y) + parseInt(value.height));
-                }
+            let values = data[ `${select}` ]
+            console.log(values)
+            for (const [key, value] of Object.entries(values)) {
+                var rect = document.getElementById(`${key}`)
+                rect.setAttribute('x', value[0]);
+                rect.setAttribute('y', value[1]);
+                rect.setAttribute('width', value[2]);
+                rect.setAttribute('height', value[3]);
+                
+                
             }
         })
     }
 
-    function addProfile() {
-        t = document.getElementById("name").value
-        x = rect.getAttribute('x');
-        y = rect.getAttribute('y');
-        rx = rect.getAttribute('rx');
-        ry = rect.getAttribute('ry');
-        width = rect.getAttribute('width');
-        height = rect.getAttribute('height');
-        console.log(t, x, y, width, height);
+    function saveProfile() {
+        var rectangles = ['first', 'second', 'third', 'fourth', 'fifth']
+        var dict = {}
+
+        
+        for (var i = 0; i < rectangles.length; i++) {
+            id = rectangles[i]
+            console.log(id)
+            var save_rect = document.getElementById(`${id}`)
+            x = save_rect.getAttribute('x');
+            y = save_rect.getAttribute('y');
+            width = save_rect.getAttribute('width');
+            height = save_rect.getAttribute('height');
+            
+            dict[id] = [x, y, width, height]
+
+            var text_rect = document.getElementById(`${id}_fill`)
+            x = text_rect.getAttribute('x');
+            y = text_rect.getAttribute('y');
+            width = text_rect.getAttribute('width');
+            height = text_rect.getAttribute('height');
+
+            dict[`${id}_fill`] = [x, y, width, height]
+
+            var txt = document.getElementById(`${id}_text`)
+            x = txt.getAttribute('x');
+            y = txt.getAttribute('y');
+            width = txt.getAttribute('width');
+            height = txt.getAttribute('height');
+
+            dict[`${id}_text`] = [x, y, width, height]
+
+
+        }
+        console.log(dict)
+        
+        profile_name = document.getElementById("name").value
+        
+        
+        var profile = { [profile_name]: dict };
+
         $.ajax({
             type: 'POST',
             beforeSend: function (request) {
-                request.setRequestHeader("Authority", JSON.stringify({
-                    [t]: {
-                        'x': x,
-                        'y': y,
-                        'width': width,
-                        'height': height
-                    }
-                }));
+                request.setRequestHeader("Authority", JSON.stringify(profile));
             },
             url: "/add_profile",
             contentType: 'application/json;charset=UTF-8',
-            data: JSON.stringify({
-                [t]: {
-                    'x': x,
-                    'y': y,
-                    'width': width,
-                    'height': height
-                }
-            }),
+            data: JSON.stringify(profile),
         });
         updateDropdown()
     }
@@ -125,20 +184,126 @@
     }
 
 
+    function swapLabels (e) {
 
-    var canvas = document.getElementById("myCanvas");
-  
+       
+            
+
+    
+            switch(e.code) {
+            case "Digit1":
+                changeVis("first")
+                break;
+            case "Digit2":
+                changeVis("second")
+                break;
+            case "Digit3":
+                changeVis("third")
+                break;
+            case "Digit4":
+                changeVis("fourth")
+                break;
+            case "Digit5":
+                changeVis("fifth")
+                break;
+            case "Space":
+                removeGuides()
+                break;
+            case "Delete":
+                removeRect();
+                removeGuides();
+                break;
+            default:
+                
+               
+                // code block
+            } 
+    
+        
+    }
+    
+
+
+    function boxName(value) {
+        var x = rect.getAttribute('x');
+        var y = rect.getAttribute('y');
+        var h = rect.getAttribute('height');
+        
+        var text_rect = document.getElementById(`${rect.id}_fill`)
+        text_rect.setAttribute('x', x);
+        text_rect.setAttribute('y', eval(y) + eval(h));
+       
+        text_rect.setAttribute('width', `${.6 * (value.length +1)}em`);
+        text_rect.setAttribute('height', '1.2em');
+
+        var txt = document.getElementById(`${rect.id}_text`)
+       
+        if (value.length == 0) {
+            text_rect.setAttribute('x', 0);
+            text_rect.setAttribute('y', 0);
+            text_rect.setAttribute('width', 0);
+            text_rect.setAttribute('height', 0);
+            txt.innerHTML = ''
+        } else {
+            
+            txt.innerHTML =`<tspan dy="1em">${value}</tspan>`
+            txt.setAttribute('x', x);
+            txt.setAttribute('y', eval(y) + eval(h));
+        }
+        
+    }
+
+  function setDropdown(val) {    
+    let element = document.getElementById("dropdown");
+    element.value = val;
+  }
+
+  function removeRect() {
+    rect.setAttribute('x', 0);
+    rect.setAttribute('y', 0);
+    rect.setAttribute('width', 0);
+    rect.setAttribute('height', 0);
+    var text_rect = document.getElementById(`${rect.id}_fill`)
+    text_rect.setAttribute('x', 0);
+    text_rect.setAttribute('y', 0);
+    text_rect.setAttribute('width', 0);
+    text_rect.setAttribute('height', 0);
+    var txt = document.getElementById(`${rect.id}_text`)
+    txt.innerHTML =``
+    txt.setAttribute('x', 0);
+    txt.setAttribute('y', 0);
+
+
+  }
+  function removeGuides() {
+    initial_pt.setAttribute('cx', -5);
+    initial_pt.setAttribute('cy', -5);
+    current_pt.setAttribute('cx', -5);
+    current_pt.setAttribute('cy', -5);
+  }
+
+
+  var canvas = document.getElementById("one");
   rect = canvas.querySelector('rect')
   initial_pt = canvas.querySelector('circle[fill=blue]')
   
   current_pt = canvas.querySelector('circle[fill=red]')
-  console.log(initial_pt)
-  console.log(current_pt)
+  addListener(canvas);
+
+  function changeVis(a) {
+      console.log(a, "CHANGE VIUS")
+    if (a == 'none') {
+        removeGuides()
+    }
+    rect = document.getElementById(a)
+    setDropdown(a)
+  }
+  
   
   function screenToSVGCoords(canvas, e) {
     // Read the SVG's bounding rectangle...
     let canvasRect = canvas.getBoundingClientRect();
-    console.log(canvasRect)
+
     // ...and transform clientX / clientY to be relative to that rectangle
     return {
       x: e.clientX - canvasRect.x,
@@ -146,13 +311,17 @@
     }
   }
   
-  
-  canvas.addEventListener('mousedown', e => {
+  function addListener(canvas) {
+    canvas.addEventListener('mousedown', e => {
     window.initial_coords = screenToSVGCoords(canvas, e);
+    
     document.addEventListener('mousemove', mousemoveWithKeys);
     document.addEventListener('mouseup', mouseupWithKeys);
   
   });
+
+  }
+  
   
   function mousemoveWithKeys(e) {
     var current_coords = screenToSVGCoords(canvas, e);
@@ -166,7 +335,7 @@
       // let description = describe(`updates the rectangle \`rect\``);
       let current_x = current_coords.x;
       let current_y = current_coords.y;
-      
+     
       if (is_constrained) {
           
           // compute the distance on the X and Y coordiantes...
@@ -222,11 +391,21 @@
       initial_pt.setAttribute('cy', initial_coords.y);
       current_pt.setAttribute('cx', current_coords.x);
       current_pt.setAttribute('cy', current_coords.y);
+      var text_rect = document.getElementById(`${rect.id}_fill`)
+      text_rect.setAttribute('x', x);
+      text_rect.setAttribute('y', eval(y) + eval(height));
+      var txt = document.getElementById(`${rect.id}_text`)
+      txt.setAttribute('x', x);
+      txt.setAttribute('y', eval(y) + eval(height));
+
+
+
       
       // return description;
   }
   
   function mousedownWithKeys(e) {
+    console.log("called")
     var initial_coords = screenToSVGCoords(canvas, e);
     document.addEventListener('mousemove', mousemoveWithKeys);
     document.addEventListener('mouseup', mouseupWithKeys);
@@ -235,6 +414,29 @@
     document.removeEventListener('mousemove', mousemoveWithKeys);
     document.removeEventListener('mouseup', mouseupWithKeys);
   }
+
+
+
+    function formUnselected() {
+        document.addEventListener('keyup',swapLabels,true);
+     
+        document.getElementById("boxName").addEventListener("click", formSelected); 
+        canvas.removeEventListener("click", formUnselected); 
+    }
+    formUnselected()
+  
+  
+    function formSelected() {
+        document.removeEventListener('keyup',swapLabels,true);
+        document.getElementById("boxName").removeEventListener("click", formSelected); 
+        canvas.addEventListener("click", formUnselected); 
+    }
+
+
+
+
+
+
 
 
 
