--- a/crosshair/templates/index.html
+++ b/crosshair/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- test -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -452,16 +452,6 @@
         document.getElementById("profileName").removeEventListener("click", formSelected); 
         canvas.addEventListener("click", formUnselected); 
     }
-
-
-
-
-
-
-
-
-
-
 
 </script>
 
